# naim-simple

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  config.yaml  predictions.csv  pyproject.toml  requirements.txt  sample_data.csv  setup.py  test_example.py  test_yaml.py  test_yaml2.py
.github/workflows/: python-publish.yaml  security.yaml  tests.yaml
naim_simple/: __init__.py  _compat.py  cli.py  config_schema.py  core.py  utils.py
naim_simple/naim/: naim.py  tabular_tokenizer.py
tests/: conftest.py  final_test.py  test_cli.py  test_config.py  test_core.py  test_legacy_persistence.py  test_yaml.py  test_yaml2.py
