[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naim-simple"
version = "0.1.0"
description = "A scikit-learn-like wrapper for the NAIM model"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Emilio Gordillo Esparragoza" } ]
dependencies = [
  "torch>=1.12.0",
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "scikit-learn>=1.0.0",
  "pyyaml>=5.4",
  "click>=8.0.0",
  "pydantic>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/naim-simple"

[project.scripts]
naim-train = "naim_simple.cli:cli"
naim-predict = "naim_simple.cli:cli"

[tool.setuptools.packages.find]
where = ["naim_simple"]
include = ["naim_simple*"]
