[build-system]
requires = ["setuptools>=83.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naim-simple"
version = "0.1.0"
description = "A scikit-learn-like wrapper for the NAIM model"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [ { name = "Emilio Gordillo Esparragoza" } ]
dependencies = [
  "torch>=2.0.0",
  "pandas>=1.5.0",
  "numpy>=1.23.0,<3",
  "scikit-learn>=1.2.0",
  "pyyaml>=6.0",
  "click>=8.0.0",
  "pydantic>=2.5.0,<3",
  "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "flake8",
  "black",
  "isort",
]

[project.urls]
Homepage = "https://github.com/Emilio-Gordillo-Esparragoza/naim-simple"

[project.scripts]
naim-train = "naim_simple.cli:train"
naim-predict = "naim_simple.cli:predict"

[tool.setuptools.packages.find]
where = ["."]
include = ["naim_simple*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["naim_simple"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
